Fix the courses table on narrow screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -79,6 +79,34 @@
       margin-right: -2em;
   }
   
+  @media screen and (max-width: 500px) {
+      thead td,
+      tfoot td,
+      th {
+          display: none;
+      }
+      td {
+          display: block;
+          /** 0 top 1rem right 0 bottom 1rem left**/
+          padding: 0 1rem 0 1rem;
+      }
+      table {
+          caption-side: top;
+      }
+      tr td:first-child {
+          padding-top: 0.3rem;
+          font-weight: bold;
+      }
+      tr td:last-child {
+          padding-bottom: 0.3rem;
+          font-style: italic;
+          font-size: 0.8em;
+      }
+      tr td:last-child::after {
+          content: "hrs/wk";
+      }
+  }
+  
   nav {
       border-bottom: 1px dotted rgba(0, 0, 0, 0.3);
       margin-right: 2em;
